--- a/css/main.css
+++ b/css/main.css
@@ -20,3 +20,19 @@
 main {
 	padding: 20px;
 }
+
+.button {
+	text-decoration:none;
+	text-align:center; 
+	padding:11px 32px;
+	border:3px solid #232D77;
+	font:18px Arial, Helvetica, sans-serif;
+	font-weight:bold;
+	color: #232D77;
+	text-transform: uppercase;
+}
+
+.button:hover {
+	background-color: #232D77;
+	color: #fff;
+}
