Images added to bottom of main content

--- a/css/main.css
+++ b/css/main.css
@@ -24,15 +24,17 @@
 aside {
 	width: 30%;
 	float: left;
-	margin-right: 20px;
+	margin-right: 30px;
 }
 
 #sidebar {
 	background-color: #232D77;
+	padding: 0px 20px 0px 20px;
 }
 
 h2 {
 	font-family: 'Cantarell', sans-serif;
+	color: #fff;
 }
 
 main {
@@ -63,4 +65,20 @@ p {
 .button:hover {
 	background-color: #232D77;
 	color: #fff;
+}
+
+#images {
+	padding: 10px;
+}
+
+.img1 {
+	width: 25%;
+}
+
+.img2 {
+	width: 19%;
+}
+
+.img3 {
+	width: 19%;
 }
