--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@ aside {
 #sidebar {
 	background-color: #232D77;
 	padding: 0px 20px 0px 20px;
+	height: 240px;
 }
 
 h2 {
@@ -65,6 +66,20 @@ p {
 .button:hover {
 	background-color: #232D77;
 	color: #fff;
+}
+
+.hyper a:link {
+	text-decoration: none;
+	color: #E8BC1B;
+	font-weight: bold;
+}
+
+.hyper a:hover {
+	text-decoration: underline;
+}
+
+.hyper a:visited {
+	color: #ad9231;
 }
 
 #images {
