Updated header texts

--- a/css/main.css
+++ b/css/main.css
@@ -33,9 +33,13 @@ aside {
 	height: 240px;
 }
 
+#sidebar h2 {
+	color: #fff;
+}
+
 h2 {
 	font-family: 'Cantarell', sans-serif;
-	color: #fff;
+	color: #0281CF;
 }
 
 main {
