Letter spacing added to footer text

--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,7 @@ footer {
 footer p {
 	color: #fff;
 	font-family: 'Fjalla One', sans-serif;
+	letter-spacing: 2px;
 }
 
 @media (min-width: 300px) {
