--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ footer p {
 		text-align: center;
 	}
 	#logo img {
-		width: 50%;
+		width: 40%;
 	}
 }
 
@@ -162,10 +162,11 @@ footer p {
 	}
 }
 
-@media (min-width: 850px) {
+@media (min-width: 750px) {
 	#logo img {
-		width: 31%;
+		width: 29%;
 		float: left;
+		padding-top: 15px;
 	}
 	main {
 		float: right;
