--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@
 
 #sidebar {
 	height: 273px;
-	padding: 0px 20px 20px 20px;
+	margin: 20px;
 }
 
 #blue, #red, #yellow, #grey {
@@ -197,9 +197,10 @@ footer p {
 	.img2, .img3 {
 		width: 29%
 	}
-	aside {
+	#sidebar {
 		float: left;
 		width: 30%;
+		margin: 0 0 20px;
 	}
 	footer {
 		clear: both;
